# mesh-creator

./: CMakeLists.txt  README.md  main.cpp
include/: utils.hpp  writeglTF.hpp
input/: data.json  model.gltf
output/: model.gltf
src/: utils.cpp  writeglTF.cpp
